<resources>
    <string name="app_name">Chatime</string>
    <string name="powered_by_elad_apps" translatable="false">Powered by Elad Apps ©</string>
    <string name="privacy_policy_link" translatable="false">https://sites.google.com/view/chatimeprivacypolicy/home</string>
    <string name="terms_of_use_link" translatable="false">https://sites.google.com/view/chatimetermsofuse/home</string>
    <string name="default_notification_channel_id" translatable="false">chatime_notification_channel_id</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_phone_number_description">Chatime needs to verify your phone number\n in order to continue.</string>
    <string name="enter_phone_number_hint">050–123–4567</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="phone_number_dialog_message">This is the phone number chosen for validation: %s\nWould you like to continue?</string>
    <string name="phone_number_dialog_title">Phone Number</string>
    <string name="close">Close</string>
    <string name="agree_terms_and_policy">Please read our Privacy Policy and check the box to agree the Terms Of Use.</string>
    <string name="verifying_your_phone_number">Verifying your phone number</string>
    <string name="enter_code_description">Enter 6 digits code</string>
    <string name="code_hint">111–111</string>
    <string name="send_code">Send Code</string>
    <string name="resend_code_text">Resend code in %s seconds</string>
    <string name="invalid_request">The request is invalid for this phone number, please try again.</string>
    <string name="too_many_requests">Too many requests for this phone number, please try again later.</string>
    <string name="general_request_error">The phone number entered is invalid, please try again.</string>
    <string name="code_invalid">The code you entered is invalid,, please try again.</string>
    <string name="firebase_network_error">The network is offline, please turn on your network and try again.</string>
    <string name="general_code_error">Something went wrong, please check the code you entered is correct and try again later.</string>
    <string-array name="agree_terms_and_policy_subtext">
        <item>Privacy Policy</item>
        <item>Terms Of Use</item>
    </string-array>
    <string-array name="terms_and_policy_links">
        <item>https://sites.google.com/view/chatimeprivacypolicy/home</item>
        <item>https://sites.google.com/view/chatimetermsofuse/home</item>
    </string-array>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="camera_permission_title">Camera Permissions Required</string>
    <string name="storage_permissions_title">Storage Permissions Required</string>
    <string name="contact_permissions_title">Contact Permissions Required</string>
    <string name="camera_permission_message">In order to take picture with the camera feature,, your approval to this permission is required.</string>
    <string name="storage_permissions_message">In order to pick pictures from gallery, your approval to this permission is required.</string>
    <string name="contact_permissions_message">In order to pick contact from phone, your approval to this permission is required.</string>
    <string name="name_required">Name is required field</string>
    <string name="gender_required">Gender is required field</string>
    <string name="status_required">Status is required field</string>
    <string name="manage_notifications">Manage notifications</string>
    <string name="logout">Logout</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="no_chats">Currently there is no chats to show.\nTap the plus button to add new chat.</string>
    <string name="message">message</string>
</resources>