<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.otp.OtpAuthFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/auth_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifying_your_phone_number"
                android:textSize="20sp"
                android:textColor="@color/primaryColor"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/auth_text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/enter_code_description"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/auth_edt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code_hint"
                android:textAlignment="center"
                android:layout_margin="15dp"
                android:maxLength="6"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:autofillHints="111111" />

            <TextView
                android:id="@+id/auth_txt_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/auth_btn_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/send_code" />
        </LinearLayout>
    </RelativeLayout>
</layout>
