<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.otp.OtpSendFragment">

    <data>
        <import type="android.view.View"/>
        <variable
            name="text"
            type="String" />
        <variable
            name="subtext"
            type="String[]" />
        <variable
            name="isOrientationPortrait"
            type="boolean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:centerInParent="@{isOrientationPortrait}">

            <TextView
                android:id="@+id/send_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_phone_number"
                android:textSize="20sp"
                android:textColor="@color/primaryColor"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/send_text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/enter_phone_number_description"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="15dp">

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/send_spn_ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/send_edit_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_phone_number_hint"
                    android:maxLength="10"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:autofillHints="050-123-4567"
                    tools:ignore="TextFields" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingVertical="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    app:text="@{text}"
                    app:subtext="@{subtext}"
                    />

                <CheckBox
                    android:id="@+id/send_cbx_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/send_btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/ok" />
        </LinearLayout>
    </RelativeLayout>
</layout>
