<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.main.tabs_fragments.settings.SettingsFragment">

    <data>
        <variable
            name="model"
            type="com.elad.chatimeapp.model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="36dp"
            android:text="@string/settings"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="42sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#EFEDED" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="128dp">

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:profileImage="@{model.profileImage}"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/male"
                    android:contentDescription="@string/app_name" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.name}"
                android:paddingHorizontal="8dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                tools:text="Elad Sabag" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.status}"
                android:paddingHorizontal="8dp"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                tools:text="Available" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#EFEDED" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_notifications"
                android:textSize="18sp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/settings_switch_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#EFEDED" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/settings_btn_logout"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_logout"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="#EFEDED" />
    </LinearLayout>

</layout>